# -home-nick-Projects-001_from_Grok

./: .dockerignore  .gitignore  .importlinter  .pre-commit-config.yaml  AUDIT_EXECUTIVE_SUMMARY.md  AUTO_UPDATE_TEST.md  BACKGROUND_SERVICE_GUIDE.md  CHANGELOG.md  CONFIG_UPGRADE_GUIDE.md  DAEMON_MODE_GUIDE.md  DOCKER_DEPLOYMENT_TEST.md  Dockerfile  Dockerfile.fixed  Dockerfile.test  FAVICON_INSTALL_REPORT.md  FINAL_REFACTORING_SUCCESS_REPORT.md  MARKETPLACE_DEBUG_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROD_TEST_READY.md  PROJECT_AUDIT_REPORT.md  QUICK_CONFIG_REFERENCE.md  QUICK_START.md  README.md  README_DEPLOY.md  READY_FOR_TESTING.md  REFACTORING_REPORT.md  RESTART_NEEDED.md  TESTING_REPORT.md  TESTING_SUMMARY.md  TEST_RESULTS.md  TEST_UPDATE.md  TRANSCRIBER_MODE_GUIDE.md  UBUNTU_DEPLOYMENT_GUIDE.md  UBUNTU_QUICK_START.md  __init__.py  __version__.py  check_status.py  cookies.txt  deploy-test.py  docker-compose.test.yml  (+27 more)
.github/workflows/: test.yml
adapters/storage/: __init__.py  json_adapter.py
adapters/telegram/: __init__.py  aiogram_adapter.py
adapters/updater/: __init__.py  git_adapter.py
apps/: __init__.py  cli_app.py  web_app.py
core/config/: config_migrator.py  external_config_manager.py  legacy_adapter.py
core/domain/: __init__.py  bot.py  config.py  conversation.py
core/entrypoints/: __init__.py  config.py  factories.py  usecases.py
core/entrypoints/api/: __init__.py  api_app.py
core/entrypoints/api/routes/: __init__.py  bot_api.py  conversation_api.py  system_api.py
core/entrypoints/api/schemas/: __init__.py  bot_schemas.py  conversation_schemas.py  system_schemas.py
core/entrypoints/cli/: __init__.py  cli_app.py
core/entrypoints/cli/commands/: __init__.py  bot_commands.py  (+2 more)
core/entrypoints/domain/: __init__.py  entities.py  ports.py
core/entrypoints/web/: __init__.py  flask_app.py
core/ports/: __init__.py  storage.py  telegram.py  updater.py
core/usecases/: __init__.py  bot_management.py  conversation.py  conversation_management.py  system.py  system_management.py
core/utils/: telegram_bot_info.py
docs/: ADMIN_GUIDE.md  ADR-0001-architecture.md  ARCHITECTURE_BRIEF.md  AUTO_BOT_NAME_FEATURE.md  EXTERNAL_CONFIG_SYSTEM.md  MIGRATION_PLAN.md  USER_GUIDE.md
infra/scripts/: dev-setup.sh
reports/: test_report.html
scripts/: config_manager_cli.py
src/: __version__.py  admin_bot.py  app.py  app_new.py  app_old.py  app_original.py  app_restart.pid  auto_updater.py  bot_manager.py  config_manager.py  quick_start.py  telegram_bot.py  test_bot_stopping.py  test_restart.sh  version.py
src/api/auth/: __init__.py  routes.py
src/api/v1/: __init__.py  admin.py  bots.py  marketplace.py  system.py
src/api/v2/: __init__.py  bots.py  system.py  telegram.py  uploads.py
src/bridge/: __init__.py  bot_management_bridge.py  config_bridge.py
src/integration/: __init__.py  unified_app.py
src/migration/: __init__.py  migrate_v1_to_v2.py
src/monitoring/: __init__.py  logging_system.py  metrics_collector.py
src/optimization/: __init__.py  performance_optimizer.py
src/shared/: auth.py  utils.py
src/templates/: bot_detail.html  dialogs.html  index.html  login.html  logout.html  marketplace.html
src/web/: __init__.py  routes.py
tests/: __init__.py  conftest.py  utils.py
tests/api/: test_authentication.py  test_bot_management.py  test_marketplace.py  test_system_endpoints.py
tests/contract/: __init__.py  test_storage_port.py  test_telegram_port.py  test_updater_port.py
tests/e2e/: test_web_interface.py
tests/entrypoints/: __init__.py  conftest.py  factories.py
tests/entrypoints/api/: test_api_app.py  test_authentication.py  test_bot_api.py  test_conversation_api.py  test_system_api.py
tests/entrypoints/cli/: test_bot_commands.py  test_cli_app.py  test_conversation_commands.py  test_system_commands.py
tests/entrypoints/e2e/: test_api_e2e.py  test_cli_e2e.py  test_web_e2e.py
tests/entrypoints/integration/: test_api_integration.py  test_cli_integration.py  test_web_integration.py
tests/entrypoints/performance/: test_api_performance.py  test_web_performance.py
tests/entrypoints/web/: test_authentication.py  test_bot_routes.py  test_conversation_routes.py  test_flask_app.py  test_system_routes.py
tests/integration/: test_adapters.py  test_api_endpoints.py  test_migration_integration.py
tests/performance/: test_performance.py
tests/security/: test_security.py
tests/ui/: test_web_interface.py
tests/unit/: test_config_manager.py
tests/usecases/: __init__.py  test_bot_management_usecase.py  test_conversation_usecase.py  test_system_usecase.py
tests/validation/: test_final_system_validation.py
оперативка/: отчет_этап_1.md  план_профессионального_тестирования.md  план_работы.md  финальный_отчет.md
(+4 files in other folders)
